--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width; initial-scale=1">
     
-    <link rel="icon" type="image/png" href="http://example.com/image.png" />
+    <link rel="icon" type="image/png" href="//favicon.png" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
